--- a/app/src/main/res/layout/fragment_charge.xml
+++ b/app/src/main/res/layout/fragment_charge.xml
@@ -7,159 +7,56 @@
     android:layoutDirection="ltr"
     >
 
-
-    <ScrollView
-        android:layout_above="@+id/continuation"
+    <RelativeLayout
+        android:id="@+id/Relative_Map"
         android:layout_width="match_parent"
-        android:scrollbars="none"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:elevation="16dp"
+        android:visibility="visible"
+        android:layout_above="@+id/continuation"
+        >
 
-        <RelativeLayout
-            android:layout_margin="5dp"
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+
+
+        <AutoCompleteTextView
+            android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            >
-
-        <LinearLayout
-            android:id="@+id/linear"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp">
-
-
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_marginTop="2dp"
-                android:background="@color/white"
-                app:hintTextAppearance="@style/HintText"
-                android:gravity="end|center_vertical"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="2dp"
-                >
-
-                <EditText
-                    android:layout_weight="1"
-                    android:id="@+id/secondName"
-                    android:layout_width="match_parent"
-                    android:layout_height="75dp"
-                    android:drawablePadding="30dp"
-                    android:background="@color/white"
-                    android:hint="@string/secondName"
-                    android:inputType="textPersonName"
-                    android:textColorHint="#a9a5a5"
-                    android:maxLines="1"
-                    android:fontFamily="@font/cairo"
-                    android:textDirection="rtl"
-                    android:gravity="start|center_vertical"
-                    android:textSize="16sp"
-
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:singleLine="true" />
-
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:layout_weight="1"
-                android:layout_marginTop="2dp"
-                app:hintTextAppearance="@style/HintText"
-                android:gravity="end|center_vertical"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:layout_width="match_parent"
-                android:layout_marginStart="2dp"
-                >
-
-                <EditText
-                    android:id="@+id/first_Name"
-                    android:layout_width="match_parent"
-                    android:layout_height="75dp"
-                    android:drawablePadding="30dp"
-                    android:hint="@string/firstName"
-                    android:background="@color/white"
-                    android:inputType="textPersonName"
-                    android:textColorHint="#a9a5a5"
-                    android:maxLines="1"
-                    android:fontFamily="@font/cairo"
-                    android:textDirection="rtl"
-                    android:gravity="start|center_vertical"
-                    android:textSize="16sp"
-
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:singleLine="true" />
-
-            </android.support.design.widget.TextInputLayout>
-        </LinearLayout>
+            android:padding="15dp"
+            android:fontFamily="@font/cairo"
+            android:background="@drawable/rec_items_shape"
+            android:layout_margin="20dp"
+            android:textSize="15sp"
+            android:hint="شحن الي "
+            android:gravity="center_horizontal"
+            android:elevation="5dp"
+            />
 
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/addressLn"
-                android:layout_below="@+id/linear"
-                android:layout_weight="1"
-                android:layout_marginTop="10dp"
-                android:background="@color/white"
-                app:hintTextAppearance="@style/HintText"
-                android:gravity="end|center_vertical"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                >
 
-                <EditText
-                    android:id="@+id/address"
-                    android:layout_width="match_parent"
-                    android:layout_height="75dp"
-                    android:drawablePadding="30dp"
-                    android:hint="@string/address"
-                    android:inputType="textPersonName"
-                    android:textColorHint="#a9a5a5"
-                    android:maxLines="1"
-                    android:fontFamily="@font/cairo"
-                    android:textDirection="rtl"
-                    android:background="@color/white"
-                    android:gravity="start|center_vertical"
-                    android:textSize="16sp"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:singleLine="true" />
 
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:layout_below="@+id/addressLn"
-                android:layout_weight="1"
-                android:background="@color/white"
-                app:hintTextAppearance="@style/HintText"
-                android:gravity="end|center_vertical"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent">
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_pin"
+            android:scaleType="fitXY"
+            />
 
-                <EditText
-                    android:id="@+id/phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="75dp"
-                    android:drawablePadding="30dp"
-                    android:hint="@string/Phone"
-                    android:inputType="number"
-                    android:textColorHint="#a9a5a5"
-                    android:maxLines="1"
-                    android:fontFamily="@font/cairo"
-                    android:textDirection="rtl"
-                    android:background="@color/white"
-                    android:gravity="start|center_vertical"
-                    android:textSize="16sp"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
-                    android:singleLine="true" />
 
-            </android.support.design.widget.TextInputLayout>
-        </RelativeLayout>
 
-    </ScrollView>
-
+    </RelativeLayout>
     <Button
         android:id="@+id/continuation"
         android:layout_width="match_parent"
@@ -173,5 +70,8 @@
         android:elevation="8dp"
 
         />
+
+
+
 
 </RelativeLayout>
