--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -106,7 +106,7 @@
                     android:layout_width="wrap_content"
                     android:gravity="center_vertical"
                     android:layout_height="match_parent"
-                    android:textColor="@color/blue"
+                    android:textColor="@android:color/black"
                     android:fontFamily="@font/cairo"
                     android:text="الرئيسية"
                     android:layout_centerInParent="true"/>
