--- a/app/src/main/res/layout/activity_show_product.xml
+++ b/app/src/main/res/layout/activity_show_product.xml
@@ -335,7 +335,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_weight="2"
-        android:background="@color/dark_blue"
+        android:background="@color/bacG"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="horizontal">
 
