--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -32,8 +32,8 @@
         <ImageView
             android:id="@+id/lrahtk_img"
             android:layout_width="300dp"
-            android:layout_height="250dp"
-            android:src="@drawable/ic_lrahtk2"
+            android:layout_height="300dp"
+            android:src="@drawable/icon"
             android:scaleType="fitXY"
             />
 
