--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView
-
     android:id="@+id/image_loading"
-    android:padding="10dp"
     android:scaleType="fitXY"
     android:layout_width="100dp"
     android:layout_height="100dp"
-    android:src="@drawable/lrahtk_icon"
+    android:src="@drawable/icon"
     android:elevation="16dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
 
