--- a/app/src/main/res/layout/paying_fragment_layout.xml
+++ b/app/src/main/res/layout/paying_fragment_layout.xml
@@ -92,7 +92,7 @@
                         android:layout_alignParentEnd="true"
                         android:fontFamily="@font/cairo"
                         android:text="تطبيق"
-                        android:background="@drawable/ather_button_style"
+                        android:background="@drawable/rectangle_btn_background"
                         android:layout_height="match_parent" />
 
 
@@ -172,6 +172,7 @@
 
 
                     <TextView
+                        android:id="@+id/txTotal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -179,7 +180,7 @@
                         android:gravity="start"
                         android:layout_alignParentStart="true"
                         android:textColor="@color/blue"
-                        android:text="L.E 92.50"/>
+                        android:text="0"/>
 
                     <TextView
                         android:layout_width="wrap_content"
