--- a/app/src/main/res/layout/signin_layout.xml
+++ b/app/src/main/res/layout/signin_layout.xml
@@ -44,10 +44,9 @@
 
 
                 <ImageView
-
-                    android:layout_width="180dp"
+                    android:layout_width="80dp"
                     android:layout_marginStart="20sp"
-                    android:src="@drawable/ic_lrahtk"
+                    android:src="@drawable/icon"
                     android:layout_alignParentStart="true"
                     android:scaleType="fitXY"
                     android:padding="5dp"
