--- a/app/src/main/res/layout/suring_paying_layout.xml
+++ b/app/src/main/res/layout/suring_paying_layout.xml
@@ -153,7 +153,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="20sp"
-                    android:gravity="center_horizontal"
+                    android:gravity="center_vertical"
                     android:layout_below="@+id/linearinrelativethree"
                     android:layout_height="wrap_content">
 
@@ -186,6 +186,7 @@
                     android:layout_marginTop="20sp"
                     android:layout_width="match_parent"
                     android:layout_below="@+id/one"
+                    android:gravity="center_vertical"
                     android:layout_height="wrap_content">
                     <TextView
                         android:layout_weight="1"
@@ -211,6 +212,7 @@
                     android:layout_marginEnd="10dp"
                     android:layout_marginTop="20sp"
                     android:layout_below="@+id/two"
+                    android:gravity="center_vertical"
                     android:layout_height="wrap_content">
                     <TextView
                         android:id="@+id/finalTotal"
@@ -225,7 +227,6 @@
                         android:layout_width="match_parent"
                         android:text="المبلغ الإجمالي"
                         android:fontFamily="@font/cairo"
-                        android:layout_alignParentEnd="true"
                         android:textColor="@android:color/black"
                         android:textSize="18sp"
                         android:layout_height="wrap_content" />
