--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#00acec</color>
+    <color name="colorPrimaryDark">#FFCB00</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
-    <color name="blue">#00acec</color>
+    <color name="blue">#FFCB00</color>
     <color name="dark_blue">#FF067199</color>
     <color name="bgBottomNavigation">#fe485a</color>
     <color name="yellow">#FFC61B</color>
