--- a/app/src/main/res/layout/nav_layout.xml
+++ b/app/src/main/res/layout/nav_layout.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-
         android:gravity="center_vertical"
         >
 
@@ -25,6 +24,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="10dp"
             android:scaleType="fitXY"
+            android:tint="@color/white"
             />
         <TextView
             android:textDirection="ltr"
