--- a/app/src/main/res/layout/yellow_circle_rec.xml
+++ b/app/src/main/res/layout/yellow_circle_rec.xml
@@ -6,6 +6,6 @@
     android:layout_gravity="center_horizontal"
     android:background="@drawable/circle_shape"
     android:layout_height="50dp"
-    android:scaleType="centerInside"
-    android:padding="6dp"
+    android:scaleType="fitXY"
+    android:padding="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android" />
