--- a/app/src/main/res/layout/fragment_gift.xml
+++ b/app/src/main/res/layout/fragment_gift.xml
@@ -16,16 +16,18 @@
         >
 
         <RelativeLayout
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
+            android:paddingTop="5dp"
+            android:paddingBottom="10dp"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/photo"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:scaleType="fitXY"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp"
                 android:background="@drawable/ic_frame"
                 android:src="@drawable/ic_user"
                 android:padding="28dp"
@@ -93,13 +95,14 @@
             <Button
                 android:layout_below="@+id/TI2"
                 android:layout_width="200dp"
-                android:layout_height="80dp"
+                android:layout_height="70dp"
                 android:layout_marginStart="20sp"
                 android:background="@drawable/button_background"
                 android:fontFamily="@font/cairo"
                 android:text="@string/Order"
                 android:textSize="22sp"
                 android:layout_centerHorizontal="true"
+                android:elevation="4dp"
                 android:textColor="@android:color/white" />
         </RelativeLayout>
 
