--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="yellow">#FFC61B</color>
     <color name="bacG">#514f4f</color>
     <color name="color3">#45C4C4C4</color>
+    <color name="color2">#C4C4C4</color>
     <color name="color4">#F77062</color>
 </resources>
