--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:layoutDirection="ltr"
     tools:context="com.alaa.microprocess.lrahtk.Fragment.Search">
@@ -11,12 +12,13 @@
     android:id="@+id/Linear"
     android:orientation="vertical"
     android:layout_above="@+id/linear2"
+    android:background="@color/color3"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
        <android.support.v7.widget.Toolbar
-           android:background="@color/white"
            android:elevation="8dp"
+           android:background="@color/color3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
 
@@ -25,6 +27,7 @@
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="8dp"
+
                />
        </android.support.v7.widget.Toolbar>
 
@@ -36,8 +39,127 @@
     </android.support.v7.widget.RecyclerView>
 
  </LinearLayout>
+<LinearLayout
+    android:id="@+id/Linear2"
+    android:orientation="vertical"
+    android:layout_above="@+id/linear2"
+    android:layout_marginTop="130dp"
+    android:visibility="gone"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:textSize="24sp"
+        android:fontFamily="@font/cairo"
+        android:text="@string/filterBy"
+        android:textColor="#000"
+        android:gravity="center_vertical"
+        android:textAlignment="center"
+        android:elevation="2dp"
+        android:background="@color/white"
+        />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+          android:orientation="vertical"
+            android:layout_weight="1"
+            android:background="@color/color2"
+            android:layout_height="match_parent"
+            android:elevation="1dp"
+            android:layout_width="0dp">
+
+            <TextView
+                android:id="@+id/txCategories"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:textSize="20sp"
+                android:fontFamily="@font/cairo"
+                android:text="@string/Categories"
+                android:textColor="#000"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:layout_marginTop="30dp"
+                android:background="@color/white"
+                />
+            <TextView
+                android:id="@+id/txPrice"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:textSize="20sp"
+                android:fontFamily="@font/cairo"
+                android:text="@string/price"
+                android:textColor="#000"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:layout_marginTop="30dp"
+                />
 
 
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="2"
+            android:background="@color/white"
+            android:layout_height="match_parent"
+            android:layout_width="0dp">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rec_categories"
+                android:layout_width="match_parent"
+                android:background="@color/white"
+
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+
+            <LinearLayout
+                android:id="@+id/Linear_price"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:visibility="gone"
+                android:orientation="vertical">
+
+                <belka.us.androidtoggleswitch.widgets.ToggleSwitch
+                    android:id="@+id/ToggleBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="50dp"
+                    android:elevation="5dp"
+                    custom:textToggleLeft="اقل من "
+                    custom:textToggleRight="اكبر من "
+                    custom:toggleWidth="80dp"
+                    android:textSize="18dp"
+                    />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginEnd="50dp"
+                    android:fontFamily="@font/cairo"
+                    android:hint="@string/price"
+                    android:inputType="number"
+                    android:textAlignment="center"
+                    />
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+</LinearLayout>
     <LinearLayout
         android:id="@+id/linear2"
         android:layout_alignParentBottom="true"
