--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,12 +11,13 @@
    <LinearLayout
     android:id="@+id/Linear"
     android:orientation="vertical"
-    android:layout_above="@+id/linear2"
+    android:layout_above="@+id/ln2"
     android:background="@color/color3"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
        <android.support.v7.widget.Toolbar
+           android:id="@+id/toolbar"
            android:elevation="8dp"
            android:background="@color/color3"
            android:layout_width="match_parent"
@@ -42,9 +43,9 @@
 <LinearLayout
     android:id="@+id/Linear2"
     android:orientation="vertical"
-    android:layout_above="@+id/linear2"
-    android:layout_marginTop="130dp"
+    android:layout_above="@+id/ln2"
     android:visibility="gone"
+    android:elevation="4dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -115,7 +116,7 @@
                 android:id="@+id/rec_categories"
                 android:layout_width="match_parent"
                 android:background="@color/white"
-
+                android:visibility="visible"
                 android:layout_height="match_parent">
 
             </android.support.v7.widget.RecyclerView>
@@ -125,6 +126,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
+                android:gravity="center_vertical"
                 android:visibility="gone"
                 android:orientation="vertical">
 
@@ -144,7 +146,6 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
                     android:layout_marginStart="50dp"
                     android:layout_marginEnd="50dp"
                     android:fontFamily="@font/cairo"
@@ -161,7 +162,7 @@
     </LinearLayout>
 </LinearLayout>
     <LinearLayout
-        android:id="@+id/linear2"
+        android:id="@+id/ln2"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
