--- a/app/src/main/res/layout/activity_product_.xml
+++ b/app/src/main/res/layout/activity_product_.xml
@@ -95,8 +95,9 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rectwo"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
             >
 
 
