--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,32 +9,34 @@
 
 
    <LinearLayout
-    android:id="@+id/Linear"
+    android:id="@+id/Linear1"
     android:orientation="vertical"
     android:layout_above="@+id/ln2"
     android:background="@color/color3"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-       <android.support.v7.widget.Toolbar
-           android:id="@+id/toolbar"
-           android:elevation="8dp"
-           android:background="@color/color3"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
 
-           <android.support.v7.widget.SearchView
+
+           <EditText
+               android:drawableStart="@drawable/ic_search_black_24dp"
                android:id="@+id/search"
                android:layout_width="match_parent"
-               android:layout_height="60dp"
+               android:layout_height="?attr/actionBarSize"
                android:elevation="8dp"
+               android:textSize="20sp"
+               android:textAlignment="center"
+               android:gravity="center_horizontal|center_vertical"
+               android:background="@color/white"
+               android:paddingStart="15dp"
+               android:paddingEnd="15dp"
 
-               />
-       </android.support.v7.widget.Toolbar>
+            />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rec_search"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
@@ -45,9 +47,10 @@
     android:orientation="vertical"
     android:layout_above="@+id/ln2"
     android:visibility="gone"
-    android:elevation="4dp"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <TextView
         android:layout_width="match_parent"
@@ -112,14 +115,38 @@
             android:layout_height="match_parent"
             android:layout_width="0dp">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rec_categories"
-                android:layout_width="match_parent"
-                android:background="@color/white"
+            <LinearLayout
+                android:id="@+id/LinearRec"
+                android:orientation="vertical"
                 android:visibility="visible"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            </android.support.v7.widget.RecyclerView>
+                <CheckBox
+                    android:id="@+id/allChecked"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="@string/all"
+                    android:fontFamily="@font/cairo"
+                    android:textSize="18sp"
+                    android:layout_margin="5dp"
+                    />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rec_categories"
+                    android:layout_width="match_parent"
+                    android:background="@color/white"
+                    android:layout_marginStart="10dp"
+                    android:visibility="visible"
+                    android:layout_height="match_parent"
+
+                    />
+
+            </LinearLayout>
+
+
+
 
             <LinearLayout
                 android:id="@+id/Linear_price"
@@ -130,30 +157,34 @@
                 android:visibility="gone"
                 android:orientation="vertical">
 
-                <belka.us.androidtoggleswitch.widgets.ToggleSwitch
-                    android:id="@+id/ToggleBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="50dp"
-                    android:elevation="5dp"
-                    custom:textToggleLeft="اقل من "
-                    custom:textToggleRight="اكبر من "
-                    custom:toggleWidth="80dp"
-                    android:textSize="18dp"
-                    />
 
                 <EditText
+                    android:id="@+id/ETlessThan"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="60dp"
                     android:layout_marginStart="50dp"
                     android:layout_marginEnd="50dp"
                     android:fontFamily="@font/cairo"
-                    android:hint="@string/price"
+                    android:hint="@string/lessthan"
                     android:inputType="number"
                     android:textAlignment="center"
+                    android:background="@drawable/liear_shape_in_paying"
+                    android:layout_marginTop="5dp"
                     />
 
+                <EditText
+                    android:id="@+id/ETMoreThan"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginEnd="50dp"
+                    android:fontFamily="@font/cairo"
+                    android:hint="@string/MoreThan"
+                    android:inputType="number"
+                    android:textAlignment="center"
+                    android:background="@drawable/liear_shape_in_paying"
+                    android:layout_marginTop="5dp"
+                    />
 
             </LinearLayout>
 
