--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,9 @@
     <style name="CircularProgress" parent="Theme.AppCompat.Light">
         <item name="colorAccent">@color/white</item>
     </style>
-
+    <style name="CircularProgress2" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@android:color/black</item>
+    </style>
 
 
     <style name="flatbutton" parent="Widget.AppCompat.Button.Borderless">
