--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,24 +14,41 @@
     android:layout_above="@+id/ln2"
     android:background="@color/color3"
     android:layout_width="match_parent"
+       android:gravity="center_horizontal"
     android:layout_height="match_parent">
 
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            android:elevation="8dp"
+            android:background="@color/white"
+            android:layout_height="wrap_content">
 
-           <EditText
-               android:drawableStart="@drawable/ic_search_black_24dp"
-               android:id="@+id/search"
-               android:layout_width="match_parent"
-               android:layout_height="?attr/actionBarSize"
-               android:elevation="8dp"
-               android:textSize="20sp"
-               android:textAlignment="center"
-               android:gravity="center_horizontal|center_vertical"
-               android:background="@color/white"
-               android:paddingStart="15dp"
-               android:paddingEnd="15dp"
-
-            />
+            <EditText
+                android:drawableStart="@drawable/ic_search_black_24dp"
+                android:id="@+id/search"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:gravity="center_horizontal|center_vertical"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:layout_weight="10"
+                />
+            <ProgressBar
+                android:layout_weight="1"
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:theme="@style/CircularProgress2"
+                style="?android:attr/progressBarStyleSmall"
+                android:visibility="gone"
+                android:layout_marginEnd="13dp"
+                />
+        </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rec_search"
