--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -36,6 +36,7 @@
                 android:gravity="center_horizontal|center_vertical"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
+                android:background="@color/white"
                 android:layout_weight="10"
                 />
             <ProgressBar
