--- a/app/src/main/res/layout/fragment_charge.xml
+++ b/app/src/main/res/layout/fragment_charge.xml
@@ -5,58 +5,127 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.alaa.microprocess.lrahtk.Fragment.Charge"
     android:layoutDirection="ltr"
+    android:background="@color/color3"
     >
 
-    <RelativeLayout
-        android:id="@+id/Relative_Map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="16dp"
-        android:visibility="visible"
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/Relative_Map"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:elevation="16dp"-->
+        <!--android:visibility="visible"-->
+        <!--android:layout_above="@+id/continuation"-->
+        <!--&gt;-->
+
+        <!--<FrameLayout-->
+            <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+            <!--xmlns:map="http://schemas.android.com/apk/res-auto"-->
+            <!--xmlns:tools="http://schemas.android.com/tools"-->
+            <!--android:id="@+id/map"-->
+            <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--/>-->
+
+
+
+        <!--<AutoCompleteTextView-->
+            <!--android:id="@+id/search"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:padding="15dp"-->
+            <!--android:fontFamily="@font/cairo"-->
+            <!--android:background="@drawable/rec_items_shape"-->
+            <!--android:layout_margin="20dp"-->
+            <!--android:textSize="15sp"-->
+            <!--android:hint="شحن الي "-->
+            <!--android:gravity="center_horizontal"-->
+            <!--android:elevation="5dp"-->
+            <!--/>-->
+
+
+
+
+        <!--<ImageView-->
+            <!--android:layout_width="30dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:src="@drawable/ic_pin"-->
+            <!--android:scaleType="fitXY"-->
+            <!--/>-->
+
+
+
+    <!--</RelativeLayout>-->
+    <ScrollView
+        android:scrollbars="none"
         android:layout_above="@+id/continuation"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <RelativeLayout
 
-        <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:map="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Spinner
+            android:id="@+id/CitySpinner"
+            android:layout_margin="20dp"
+            android:background="@drawable/spinner"
+            android:layout_width="200dp"
+            android:elevation="8dp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="50dp">
+
+        </Spinner>
+
+        <Spinner
+            android:id="@+id/VillageSpinner"
+            android:layout_below="@+id/CitySpinner"
+            android:layout_margin="20dp"
+            android:background="@drawable/spinner"
+            android:layout_width="200dp"
+            android:elevation="8dp"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"
+            android:fontFamily="@font/cairo"
+            android:layout_height="50dp">
+
+        </Spinner>
+
+        <EditText
+        android:layout_below="@+id/VillageSpinner"
+        android:id="@+id/address_Details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:fontFamily="@font/cairo"
+        android:background="@drawable/rec_items_shape"
+        android:layout_margin="20dp"
+        android:textSize="15sp"
+        android:hint="تفاصيل العنوان"
+        android:gravity="center_horizontal|center_vertical"
+        android:elevation="5dp"
+        />
+
+        <EditText
+            android:id="@+id/nots"
+            android:layout_below="@+id/address_Details"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-
-
-
-        <AutoCompleteTextView
-            android:id="@+id/search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:padding="15dp"
             android:fontFamily="@font/cairo"
             android:background="@drawable/rec_items_shape"
+
             android:layout_margin="20dp"
             android:textSize="15sp"
-            android:hint="شحن الي "
-            android:gravity="center_horizontal"
+            android:hint="الملاحظات"
+            android:gravity="center_horizontal|center_vertical"
             android:elevation="5dp"
             />
 
-
-
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="40dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_pin"
-            android:scaleType="fitXY"
-            />
-
-
-
     </RelativeLayout>
+    </ScrollView>
     <Button
         android:id="@+id/continuation"
         android:layout_width="match_parent"
