notification - topProduct - comments - address .

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -154,6 +154,7 @@
             app:itemIconTint="@drawable/custom_navigation_selector"
             app:itemTextColor="@android:color/white"
             app:menu="@menu/bottom_navigation_main"
+            android:theme="@style/Widget.BottomNavigationView"
             />
 
         <LinearLayout
