--- a/app/src/main/res/layout/main_page_frag_layout.xml
+++ b/app/src/main/res/layout/main_page_frag_layout.xml
@@ -112,7 +112,8 @@
                 android:id="@+id/recitems"
                 android:layout_marginTop="10dp"
                 android:paddingBottom="10dp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
