--- a/app/src/main/res/layout/rec_comment.xml
+++ b/app/src/main/res/layout/rec_comment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/Linear"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -49,7 +50,6 @@
             android:layout_marginTop="2dp"
             android:stepSize=".5"
             android:theme="@style/RatingBar"
-            android:rating="3"
             android:isIndicator="true"
             android:layout_marginLeft="15dp"
             />
