--- a/app/src/main/res/layout/yellow_circle_rec.xml
+++ b/app/src/main/res/layout/yellow_circle_rec.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    android:id="@+id/Icon"
-    android:layout_width="50dp"
-    android:layout_margin="5dp"
-    android:layout_gravity="center_horizontal"
-    android:background="@drawable/circle_shape"
-    android:layout_height="50dp"
-    android:scaleType="fitXY"
-    android:padding="8dp"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+<LinearLayout
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_height="wrap_content" android:layout_width="wrap_content">
+    <ImageView
+        android:id="@+id/Icon"
+        android:layout_width="50dp"
+        android:layout_margin="5dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/circle_shape"
+        android:layout_height="50dp"
+        android:scaleType="fitXY"
+        android:padding="8dp"
+        />
+    <TextView
+        android:id="@+id/YellowName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:textColor="@color/bacG"
+        android:textAlignment="center"
+        android:text="علاء محمود"
+        android:fontFamily="@font/cairo"
+        />
+</LinearLayout>
