add new Features in Gifts .

--- a/app/src/main/res/layout/activity_show_product.xml
+++ b/app/src/main/res/layout/activity_show_product.xml
@@ -297,7 +297,7 @@
                     android:id="@+id/rec_Comments"
                     android:layout_below="@+id/Btn_writeComment"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="250dp"
                     android:layout_marginStart="10dp"
                     >
 
