--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -10,8 +10,6 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     android:layoutDirection="ltr"
-
-
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -71,7 +69,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="20sp"
+                android:layout_marginTop="5sp"
                 android:layout_height="wrap_content">
 
 
@@ -273,47 +271,47 @@
                 android:textStyle="bold"
                 />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="30dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="20dp"
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginEnd="20dp"-->
+                <!--android:layout_marginStart="20dp"-->
+                <!--android:layout_marginBottom="30dp"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:layout_marginTop="20dp"-->
 
-                >
+                <!--&gt;-->
 
-                <TextView
-                    android:id="@+id/txt_register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:gravity="center"
-                    android:text="@string/signorRegister"
-                    android:textSize="15dp"
-                    android:textStyle="normal" />
+                <!--<TextView-->
+                    <!--android:id="@+id/txt_register"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:gravity="center"-->
+                    <!--android:text="@string/signorRegister"-->
+                    <!--android:textSize="15dp"-->
+                    <!--android:textStyle="normal" />-->
 
-                <ImageView
-                    android:id="@+id/face"
-                    android:layout_marginStart="20sp"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_facebook" />
+                <!--<ImageView-->
+                    <!--android:id="@+id/face"-->
+                    <!--android:layout_marginStart="20sp"-->
+                    <!--android:layout_width="30dp"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:src="@drawable/ic_facebook" />-->
 
-                <ImageView
-                    android:id="@+id/twitter"
-                    android:layout_marginStart="20sp"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/ic_twitter" />
+                <!--<ImageView-->
+                    <!--android:id="@+id/twitter"-->
+                    <!--android:layout_marginStart="20sp"-->
+                    <!--android:layout_width="30dp"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:src="@drawable/ic_twitter" />-->
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_marginStart="20sp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/google" />
+                <!--<ImageView-->
+                    <!--android:layout_width="30dp"-->
+                    <!--android:layout_marginStart="20sp"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:src="@drawable/google" />-->
 
-            </LinearLayout>
+            <!--</LinearLayout>-->
 
         </LinearLayout>
 
