--- a/app/src/main/res/layout/suring_paying_layout.xml
+++ b/app/src/main/res/layout/suring_paying_layout.xml
@@ -189,6 +189,7 @@
                     android:gravity="center_vertical"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/extra"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:textSize="18sp"
