my orders finished .

--- a/app/src/main/res/layout/main_page_frag_layout.xml
+++ b/app/src/main/res/layout/main_page_frag_layout.xml
@@ -61,6 +61,7 @@
 
 
                 <Button
+                    android:id="@+id/btnMyorders"
                     android:layout_marginStart="20sp"
                     android:layout_width="120dp"
                     android:text="طلباتي"
