--- a/app/src/main/res/layout/order_rec_style.xml
+++ b/app/src/main/res/layout/order_rec_style.xml
@@ -10,6 +10,7 @@
 
 
     <android.support.v7.widget.CardView
+        android:id="@+id/Card"
         android:layout_width="match_parent"
         android:layout_margin="8dp"
         android:elevation="12dp"
@@ -17,19 +18,18 @@
 
 
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
 
             <LinearLayout
-                android:layout_alignParentStart="true"
-                android:layout_width="160dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
                 android:orientation="vertical"
-                android:paddingTop="20sp"
-                android:layout_centerInParent="true"
-                android:paddingBottom="20sp"
-                android:layout_height="130dp">
+                android:gravity="center_vertical"
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/dataofProduct"
@@ -38,7 +38,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:text="8-jun-2016"
-                    android:textSize="18sp"
+                    android:textSize="15sp"
                     android:textColor="@android:color/black"
                     android:layout_height="wrap_content" />
 
@@ -54,23 +54,23 @@
             </LinearLayout>
 
             <LinearLayout
-
-                android:layout_width="130dp"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
                 android:orientation="horizontal"
-                android:layout_centerVertical="true"
+                android:gravity="center_vertical|end"
+
                 android:layout_marginEnd="7dp"
-                android:layout_alignParentEnd="true"
-                android:layout_height="130dp">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="95dp"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:id="@+id/whatqwayuserWantProduct"
                     android:fontFamily="@font/cairo"
-                    android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp"
                     android:layout_gravity="center"
-                    android:textColor="#dcc320"
+                    android:gravity="end"
+                    android:textColor="@color/blue"
                     android:text="Disbatched"
                     android:layout_height="wrap_content" />
 
@@ -79,8 +79,7 @@
                     android:id="@+id/gotoPersonalData"
                     android:layout_width="wrap_content"
                     android:layout_gravity="center"
-
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:scaleType="centerInside"
                     android:src="@drawable/rightarrow" />
 
@@ -88,7 +87,7 @@
             </LinearLayout>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
 
 
