--- a/app/src/main/res/layout/paying_fragment_layout.xml
+++ b/app/src/main/res/layout/paying_fragment_layout.xml
@@ -87,6 +87,7 @@
                         android:layout_height="match_parent" />
 
                     <Button
+                        android:id="@+id/apply"
                         android:layout_width="80dp"
                         android:textColor="@color/white"
                         android:layout_alignParentEnd="true"
