--- a/app/src/main/res/layout/fragment_gift.xml
+++ b/app/src/main/res/layout/fragment_gift.xml
@@ -164,6 +164,7 @@
 
 
             <Button
+                android:id="@+id/btnOrder"
                 android:layout_below="@+id/TI4"
                 android:layout_width="200dp"
                 android:layout_height="70dp"
